feat: add fundamental language syntax rules

--- a/package.json
+++ b/package.json
@@ -40,6 +40,13 @@
         ],
         "configuration": "./language-configuration.json"
       }
+    ],
+    "grammars": [
+      {
+        "language": "b",
+        "scopeName": "source.b",
+        "path": "./syntaxes/b.tmLanguage"
+      }
     ]
   }
 }
