feat: add a repository url to the package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "b-syntax-highlightning",
-  "displayName": "B Syntax Highlightning",
+  "name": "b-syntax-highlighting",
+  "displayName": "B Syntax highlighting",
   "description": "Syntax highlighting for the B language",
   "version": "0.0.1",
   "publisher": "baleiko",
@@ -11,6 +11,10 @@
   "license": "MIT",
   "engines": {
     "vscode": "^1.36.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/baleyko/vscode-b-syntax-highlighting.git"
   },
   "categories": [
     "Programming Languages"
